--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ main{
     display: flex;
     justify-content: center;
     padding: 2rem 4rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .navbar{
     background-color: #eee;
@@ -74,4 +77,60 @@ footer{
     width: 15vw;
     font-weight: bold;
     font-size: 2rem;
+}
+.formContainer{
+    height: fit-content;
+    width: 20vw;
+    background-color: #eee;
+    margin: 3rem;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
+.formContainer h1{
+    font-size: 2rem;
+    align-self: center;
+    margin: .5rem;
+}
+.formContainer form{
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+.formContainer input{
+    border: none;
+    border-radius: 20px;
+    margin: 1rem;
+    width: 80%;
+    font-size: 1.3rem;
+    padding: 1rem;
+}
+.isRead{
+    justify-self: center;
+    align-self: center;
+    display: flex;
+    flex: 1;
+    font-size: 1.2rem;
+    font-family: 'Cairo';
+    padding: 1rem;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.isRead input {
+    max-width: 5%;
+}
+.submitButton{
+    font-family: 'Cairo';
+    align-self: center;
+    justify-self: center;
+    border: none;
+    font-size: 1.7rem;
+    height: 4rem;
+    width: 10rem;
+    margin: 1rem;
+    background-color: aliceblue;
 }
