--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ footer{
     display: flex;
     flex-direction:column;
     align-items: center;
+    display: none;
 }
 .formContainer h1{
     font-size: 2rem;
@@ -133,4 +134,5 @@ footer{
     width: 10rem;
     margin: 1rem;
     background-color: aliceblue;
+    
 }
