--- a/style.css
+++ b/style.css
@@ -83,10 +83,9 @@ footer{
     width: 20vw;
     background-color: #eee;
     margin: 3rem;
-    display: flex;
+    display: none;
     flex-direction:column;
     align-items: center;
-    display: none;
 }
 .formContainer h1{
     font-size: 2rem;
@@ -134,5 +133,7 @@ footer{
     width: 10rem;
     margin: 1rem;
     background-color: aliceblue;
-    
+}
+.active {
+    display: flex;
 }
