--- a/style.css
+++ b/style.css
@@ -58,11 +58,12 @@ main{
     justify-content: center;
     align-items: center;
 }
-.cardcontainer {
+.cardContainer {
     display: flex;
+    flex-direction: row;
     width: 80vw;
-    height: fit-content;
-    gap: 2rem;
+    height: 100%;
+    gap: 1rem;
 }
 .card {
     display: flex;
@@ -71,10 +72,11 @@ main{
     padding: 1rem;
     width: 16vw;
     background-color: #eee;
-    height: 30vh;
+    height: 23vh;
     border-radius: 20px;
     align-items: center;
     justify-content: space-around;
+    margin: 1rem;
 }
 .cardTitle{
     font-size: 2rem;
@@ -89,9 +91,6 @@ main{
     font-size: 1.5rem;
     cursor: pointer;
 }
-.isReadBtn {
-    background-color: rgb(116, 190, 3);
-}
 .removeBtn {
     background-color: rgba(209, 5, 5, 0.719);
 }
@@ -99,6 +98,12 @@ main{
     background-color: #eee;
     height: 10vh;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navbar h1{
+    font-size: 3rem;
 }
 footer{
     background-color: #eee;
@@ -114,6 +119,7 @@ footer{
     width: 15vw;
     font-weight: bold;
     font-size: 2rem;
+    border-radius: 20px;
 }
 .formContainer{
     height: fit-content;
@@ -123,6 +129,9 @@ footer{
     display: none;
     flex-direction:column;
     align-items: center;
+    position: absolute;
+    top: 20%;
+    border: black solid 2px;
 }
 .formContainer h1{
     font-size: 2rem;
@@ -171,6 +180,13 @@ footer{
     margin: 1rem;
     background-color: aliceblue;
 }
+.isReadBtn {
+    background-color: rgb(116, 190, 3);
+}
 .active {
     display: flex;
 }
+.inactive{
+    display: none;
+}
+
